# Tacitvs-Quant-Terminal-TQT-

./: .dockerignore  .gitignore  .~lock.ss.docx#  COMPLETE_LOGO_SYSTEM.md  CVD_IMPLEMENTATION.md  DYNAMIC_FAVICON.md  Dockerfile.api  FAVICON_FIX.md  FAVICON_TESTING.md  FINAL_LOGO_SUMMARY.md  LOGO_UPDATE_SUMMARY.md  QUICK_START_LOGO.md  README.md  REBRANDING_SUMMARY.md  ROADMAP.md  SVG_LOGO_APPROACH.md  TESTING_PLAN.md  TEST_STRUCTURE_SUMMARY.md  config.yaml  dd.docx  implementation.md  pubkey.asc  railway.toml  ss.docx  start-api.sh  start-ui.sh  strategy.md  test_chart_api.py
apps/api/: main.py  pyproject.toml  pytest.ini  requirements.txt  start.py  test_manual.py  update_market_data.py
apps/api/core/: types.py
apps/api/core/analysis/: volume_profile.py
apps/api/routes/: __init__.py  candles.py  indicators.py  orderflow.py  volume.py  volume_profile.py
apps/api/tests/: README.md  conftest.py  test_volume_profile_comprehensive.py  test_volume_profile_simple.py
apps/api/tests/fixtures/: market_scenarios.py
apps/api/tests/integration/: test_market_state_api.py  test_volume_profile_api.py
apps/api/tests/unit/analysis/: test_volume_profile_calculator.py
apps/api/tests/unit/strategy/: test_market_state_detector.py
apps/api/tqt_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ui/: jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
core/data/: fetcher.py  hyperliquid_client.py  hyperliquid_ws.py  manager.py  orderflow.py  orderflow_recorder.py  storage.py
docs/: CHART_IMPLEMENTATION.md  FRONTEND.md  README.md
(+47 files in other folders)
